[package]
name = "github-authorized-secrets"
version = "0.1.0"
edition = "2021"
description = "Secure secret management system for GitHub Actions workflows"
authors = ["Patrick D'appollonio <hey@patrickdap.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/patrickdappollonio/github-authorized-secrets"
keywords = ["github", "actions", "secrets", "jwt", "ci-cd"]
categories = ["command-line-utilities", "web-programming", "authentication"]

[[bin]]
name = "github-authorized-secrets"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# JWT validation
jsonwebtoken = "9.0"
jwks-client = "0.2"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for JWK fetching
reqwest = { version = "0.11", features = ["json", "gzip"] }

# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }

# Output formatting
serde_yaml = "0.9"
shell-escape = "0.1"
urlencoding = "2.1"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Time handling for JWT validation
chrono = { version = "0.4", features = ["serde"] }

# Security
regex = "1.0"
zeroize = { version = "1.7", features = ["derive"] }

# JWT signing (for local testing)
rsa = "0.9"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
# Testing
mockito = "1.2"
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
debug = 0         # No debug information
