[package]
name = "github-authorized-secrets"
version = "0.1.0"
edition = "2021"
description = "Secure secret management system for GitHub Actions workflows"
authors = ["Patrick D'appollonio <hey@patrickdap.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/patrickdappollonio/github-authorized-secrets"
keywords = ["github", "actions", "secrets", "jwt", "ci-cd"]
categories = ["command-line-utilities", "web-programming", "authentication"]

[[bin]]
name = "github-authorized-secrets"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8.4"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace", "fs"] }

# JWT validation
jsonwebtoken = "9.0"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"

# HTTP client for JWK fetching
reqwest = { version = "0.12.23", features = [
  "json",
  "gzip",
  "rustls-tls",
], default-features = false }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Output formatting
serde_yaml = "0.9"
shell-escape = "0.1"
urlencoding = "2.1"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.16"

# Time handling for JWT validation
chrono = { version = "0.4", features = ["serde"] }

# Security
regex = "1.11"
zeroize = { version = "1.7", features = ["derive"] }

# JWT signing (for local testing)
rsa = "0.10.0-rc.8"
rand = "0.9.2"
uuid = { version = "1.18", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
# Testing
mockito = "1.2"
tokio-test = "0.4"
tempfile = "3.21"
serial_test = "3.0"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
debug = 0         # No debug information
strip = true      # Strip symbols for smaller binaries
